map related changes

--- a/ExpenseManagerApplication/src/app/nav-bar/manage-expense/edit-expense/edit-expense.component.html
+++ b/ExpenseManagerApplication/src/app/nav-bar/manage-expense/edit-expense/edit-expense.component.html
@@ -18,9 +18,9 @@
             </thead>
             <tbody>
                 
-                <tr *ngFor="let recipient of exByCategory | keyvalue">
-                    <td class="pt-3-half" contenteditable="true">{{exByCategory}}</td>
-                </tr>  
+               <tr *ngFor="let arrIt of exByCategory | keyvalue">
+                    <td class="pt-3-half" contenteditable="true">{{arrIt.value[0].itemName}}</td>
+                </tr>   
                 <tr *ngFor="let expense of listOfExpenses">
                   <td class="pt-3-half" contenteditable="true">{{expense.expenseId}}</td>
                   <td class="pt-3-half" contenteditable="true">{{expense.expenseDate}}</td>
