addded additional dashboard item for trends of exp

--- a/ExpenseManagerApplication/src/app/nav-bar/dashboard/dashboard.component.html
+++ b/ExpenseManagerApplication/src/app/nav-bar/dashboard/dashboard.component.html
@@ -1,11 +1,24 @@
-<div class="col col-md-4">
+<div class="row">
+<div class="col col-md-6">
 <div class="card">
   <h3 class="card-header text-center font-weight-bold text-uppercase py-4">Monthly spends</h3>
   <div class="card-body">
     <div style="display: block">
-      <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels"
+      <canvas baseChart [data]="doughnutChartData" [colors]="donutColors" [labels]="doughnutChartLabels"
         [chartType]="doughnutChartType"></canvas>
     </div>
   </div>
 </div>
 </div>
+<div class="col col-md-6">
+    <div class="card">
+      <h3 class="card-header text-center font-weight-bold text-uppercase py-3">Weekly Trends</h3>
+      <div class="card-body">
+        <div style="display: block">
+          <canvas baseChart [data]="lineChartData" [colors]="donutColors" [labels]="lineChartLabels"
+            [chartType]="lineChartType"></canvas>
+        </div>
+      </div>
+    </div>
+    </div>
+    </div>
