font style modified

--- a/ExpenseManagerApplication/src/app/nav-bar/manage-expense/manage-expense.component.html
+++ b/ExpenseManagerApplication/src/app/nav-bar/manage-expense/manage-expense.component.html
@@ -1,7 +1,7 @@
 <div id="menu" class="topnav">
-    <a routerLink="add-expense">Add Expense</a>
-    <a routerLink="edit-expense">Edit Expenses</a>
-    <a routerLink="#contact">Import Expense</a>
+    <a routerLink="add-expense">ADD EXPENSE</a>
+    <a routerLink="edit-expense">MODIFY</a>
+    <a routerLink="#contact">IMPORT FROM</a>
 </div>
 
 <div id="inner-content">
