--- a/ExpenseManagerApplication/src/app/nav-bar/nav-bar.component.html
+++ b/ExpenseManagerApplication/src/app/nav-bar/nav-bar.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Expense-Manager</a>
+    <a class="navbar-brand" href="#">EXP-MANAGER</a>
   
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-            <a class="nav-link" href="#">My Profile</a>
+            <a class="nav-link" href="#">PROFILE</a>
           </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/manage-expense">Manage Expense</a>
+          <a class="nav-link" routerLink="/manage-expense">MANAGE MY EXPENSE</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/dashboard">Dashboard</a>
+          <a class="nav-link" routerLink="/dashboard">DASHBOARD</a>
         </li>
       </ul>
       <div>
