--- a/ExpenseManagerApplication/src/app/nav-bar/nav-bar.component.css
+++ b/ExpenseManagerApplication/src/app/nav-bar/nav-bar.component.css
@@ -17,3 +17,17 @@
 .navbar-brand{
     color:rebeccapurple !important;
 }
+
+div,a,span{
+    font-family: medium-content-sans-serif-font,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+    letter-spacing: 0;
+    font-weight: 400;
+    font-style: normal;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -moz-font-feature-settings: "liga" on;
+    color: rgba(0,0,0,.84);
+    font-size: 20px;
+    line-height: 1.4
+}
