--- a/ExpenseManagerApplication/src/app/nav-bar/manage-expense/edit-expense/edit-expense.component.html
+++ b/ExpenseManagerApplication/src/app/nav-bar/manage-expense/edit-expense/edit-expense.component.html
@@ -2,6 +2,11 @@
       <h5 class="card-header text-center font-weight-bold text-uppercase py-4">My Expenses</h5>
       <div class="card-body">
         <div id="table" class="table-editable">
+          <span class="table-add float-right mb-3 mr-2">
+              <a id="add" class="text-success" (click)="add()" value="add Expenses">
+               <i class="material-icons" id="addicon">add_box</i>
+              </a>
+            </span>
           <span class="table-add float-right mb-3 mr-2"><a href="#!" class="text-success"><i
                 class="fas fa-plus fa-2x" aria-hidden="true"></i></a></span>
           <table class="table table-bordered table-responsive-md table-striped text-center">
