--- a/ExpenseManagerApplication/src/app/nav-bar/manage-expense/edit-expense/add-modal/add-modal.component.html
+++ b/ExpenseManagerApplication/src/app/nav-bar/manage-expense/edit-expense/add-modal/add-modal.component.html
@@ -1,24 +1,47 @@
-<ng-template #content let-modal>
+<div role="document" class="modal-dialog">
+
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
+    <h4 class="modal-title" id="modal-basic-title">Add Expense</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body">
-    <form>
-      <div class="form-group">
-        <label for="dateOfBirth">Date of birth</label>
-        <div class="input-group">
-          <input id="dateOfBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #dp="ngbDatepicker">
-          <div class="input-group-append">
-            <button class="btn btn-outline-secondary calendar" (click)="dp.toggle()" type="button"></button>
-          </div>
-        </div>
+    <form (onSubmit)=submit()>
+      <div class="row">
+        <label for="name">Expense Name</label>
+        <input type="text" name="name" class="form-control" placeholder="Expense Name"
+        >
       </div>
+      <div class="row">
+        <label for="category">Expense Cost</label>
+        <input type="text" name="category" class="form-control" placeholder="Expense Cost" required
+       >
+      </div>
+      <div class="row">
+        <label for="category">Expense Category</label>
+        <input type="text" name="category" class="form-control" placeholder="Expense Category" required
+       >
+      </div>
+      <div class="row">
+        <label for="expense Date">Date of Expense</label>
+        <input type="date" name="date"  class="form-control" placeholder="Date of Expense" required
+       >
+      </div>
+      <div class="row">
+        <label for="description">Description</label>
+        <input type="text" name="desc" class="form-control" placeholder="comments" required
+        >
+      </div>
+      <br>
+      <div class="row" id="submitRow">
+        <button id="expense-button" type="submit" (click)="onSubmit()" class="btn btn-primary">Add Expense</button>
+      </div>
+      <span *ngIf="submitted"> New Expense has been created!! </span>
     </form>
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button>
   </div>
-</ng-template>
+
+</div>
